fix: volume appearance is uncontrollable

--- a/assets/app.html
+++ b/assets/app.html
@@ -330,7 +330,7 @@ html {
               <input type="checkbox" id="appearance-playlist-gridview-album" class="slideswitch" aria-labelledby="appearance-playlist-gridview-album-label">
           </ul>
         </div>
-        <div id="appearance-volume">
+        <div id="appearance-volume-box">
           <h2 class="system-article-sub-header">{{ or .Volume "Volume" }}</h2>
           <ul class="system-settings">
             <li class="list-item system-setting">
