do not use small size coverart for gridview

--- a/assets/app.html
+++ b/assets/app.html
@@ -90,7 +90,8 @@ html {
     <template id="list-album-template">
       <li class="album list-item">
         <div class="album-coverbox">
-          <img loading="lazy" class="album-cover" src="/assets/nocover.svg">
+          <img loading="lazy" class="small-album-cover" src="/assets/nocover.svg">
+          <img loading="lazy" class="medium-album-cover" src="/assets/nocover.svg">
         </div>
         <div class="album-detail">
           <span class="album-detail-date" data-text-content="Date"></span>
