fix duplicate id

--- a/assets/app.html
+++ b/assets/app.html
@@ -669,7 +669,7 @@ html {
 <div id=submodal-background class="submodal-background hide"></div>
 <div id="submodal-outer" class="submodal-outer hide">
   <div id="submodal-storage-mount" class="submodal-window hide">
-    <button id="submodal-help-close" class=submodal-window-close type="button" value="" title="{{ or .titleClose "Close" }}" aria-label="{{ or .ariaLabelCloseThisWindow "Close this window" }}">
+    <button class="submodal-window-close" type="button" value="" title="{{ or .titleClose "Close" }}" aria-label="{{ or .ariaLabelCloseThisWindow "Close this window" }}">
       <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
       </svg>
@@ -689,7 +689,7 @@ html {
     </footer>
   </div>
   <div id="submodal-allowed-formats" class="submodal-window submodal-allowed-formats hide">
-    <button id="submodal-help-close" class=submodal-window-close type="button" value="" title="{{ or .titleClose "Close" }}" aria-label="{{ or .ariaLabelCloseThisWindow "Close this window" }}">
+    <button class="submodal-window-close" type="button" value="" title="{{ or .titleClose "Close" }}" aria-label="{{ or .ariaLabelCloseThisWindow "Close this window" }}">
       <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
       </svg>
